compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/FieldWithoutName2.kt
// Foo

// KTIJ-25335
class Foo(val name: String, val)
